      markup elements (which could facilitate later conversion to a
      different doc format, should that choice be made); significant
      rewordings in manpage.  Manpage Examples moved to an external
      repository / website (scons-cookbook.readthedocs.io).
    - Clean up test harness and tests' use of subdir, file_fixture and
      dir_fixture.

  From Joseph Brill:
    - MSVC updates: When there are multiple product installations (e.g, Community and
      Build Tools) of MSVC 2017 or MSVC 2019, an Enterprise, Professional, 
      or Community installation will be selected before a Build Tools installation when
      "14.1" or "14.2" is requested, respectively. (GH Issue #3699).
    - MSVC updates: When there are multiple product installations of MSVC 2017 (e.g.,
      Community and Express), 2017 Express is no longer returned when "14.1" is
      requested.  Only 2017 Express will be returned when "14.1Exp" is requested.
      (GH Issue #3699).
    - MSVC updates: An MSVC 6.0 installation now appears in the installed versions list
      when msvc debug output is enabled (GH Issue #3699).
 
RELEASE 3.1.2 - Mon, 17 Dec 2019 02:06:27 +0000

  From Edoardo Bezzeccheri
    - Added debug option "action_timestamps" which outputs to stdout the absolute start and end time for each target.

  From Rob Boehne
    - Fix suncxx tool (Oracle Studio compiler) when using Python 3.  Previously would throw an exception.
      Resolved by properly handling tool version string output as unicode.

  From Tim Gates
    - Resolved a typo in engine.SCons.Tool

  From Adam Gross:
    - Resolved a race condition in multithreaded Windows builds with Python 2
      in the case where a child process is spawned while a Python action has a
      file open. Original author: Ryan Beasley.
    - Added memoization support for calls to Environment.Value() in order to
	  improve performance of repeated calls.


  From Jason Kenny